[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Intro1.png" type="Texture" id=1]
[ext_resource path="res://Textbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Intro.gd" type="Script" id=3]
[ext_resource path="res://Assets/Intro2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Intro0.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Intro" type="Node2D"]
script = ExtResource( 3 )

[node name="Intro0" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 5 )

[node name="Intro1" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Intro2" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 4 )

[node name="TextBox" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Black" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 1 )
anims/fade = SubResource( 2 )

[connection signal="change_bg" from="TextBox" to="." method="_on_TextBox_change_bg"]
[connection signal="textbox_done" from="TextBox" to="." method="_on_TextBox_textbox_done"]
